# webgal-lsp

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  lint.yml  release.yml  test.yml
crates/count/: Cargo.toml
crates/count/src/: hash.rs  lib.rs  sort.rs  tree.rs
crates/json-complete/: Cargo.toml
crates/json-complete/src/: convert.rs  lib.rs  locate.rs  value.rs
crates/json-complete/tests/: complete_test.rs  locate_test.rs
crates/lsp-encode/: Cargo.toml
crates/lsp-encode/src/: lib.rs
crates/lsp-encode/tests/: basic_test.rs
crates/path-tree/: Cargo.toml
crates/path-tree/benches/: path_tree_bench.rs
crates/path-tree/src/: entry.rs  folder.rs  iter.rs  lib.rs  node.rs  util.rs
crates/path-tree/tests/: basic_test.rs  edge_case_test.rs  entry_test.rs  iter_test.rs
crates/ranked-count/: Cargo.toml
crates/ranked-count/src/: lib.rs
crates/ranked-count/tests/: basic_test.rs  iter_test.rs  random_test.rs
crates/webgal-highlight/: Cargo.toml
crates/webgal-highlight/src/: lib.rs
crates/webgal-highlight/tests/: choice_test.rs
crates/webgal-language-core/: Cargo.toml
crates/webgal-language-core/benches/: sentence_bench.rs
crates/webgal-language-core/src/: sentence.rs  util.rs
crates/webgal-language-core/src/element/: choice.rs  effect.rs  token.rs
crates/webgal-language-core/src/resource/: config.rs
crates/webgal-language-core/src/sentence/: statement.rs
crates/webgal-language-core/tests/fixtures/scene/: roundtrip-original.txt
crates/webgal-language-server/: Cargo.toml
crates/webgal-language-server/src/: lib.rs  project.rs  server.rs
crates/webgal-language-server/src/project/: fs.rs
crates/webgal-language-server/src/service/: complete.rs  diagnose.rs  format.rs
crates/webgal-language-server/src/service/complete/: argument.rs  command.rs
crates/webgal-language-service/: Cargo.toml
crates/webgal-language-service/src/: encode.rs  lib.rs  project.rs  service.rs  wasm.rs
crates/webgal-language-service/src/project/: error.rs  ident.rs  resource.rs
crates/webgal-language-service/src/service/: complete.rs  diagnose.rs  format.rs  highlight.rs
crates/webgal-language-service/src/service/complete/: argument.rs  command.rs
crates/webgal-language-service/src/service/diagnose/: environment.rs  syntax.rs
crates/webgal-ls/: Cargo.toml
crates/webgal-ls/src/: complete.rs  context.rs  diagnose.rs  encode.rs  highlight.rs  lib.rs  project.rs  server.rs  service.rs
crates/webgal-ls/src/complete/: argument.rs  command.rs
crates/webgal-ls/src/project/: error.rs  fs.rs  ident.rs  resource.rs  workspace.rs
crates/webgal-ls/src/service/: complete.rs  diagnose.rs  format.rs  highlight.rs
crates/webgal-ls/src/service/complete/: argument.rs  command.rs
crates/webgal-ls/src/service/diagnose/: environment.rs  syntax.rs
crates/webgal-model/: Cargo.toml
crates/webgal-model/benches/: sentence_bench.rs
crates/webgal-model/benches/fixtures/: sample.txt
crates/webgal-model/src/: element.rs  lib.rs  resource.rs  sentence.rs  util.rs
crates/webgal-model/src/element/: choice.rs  effect.rs  token.rs
crates/webgal-model/src/resource/: config.rs  figure.rs
crates/webgal-model/src/sentence/: error.rs  primary.rs  scene.rs  statement.rs
crates/webgal-model/tests/fixtures/scene/: roundtrip-expected.txt
crates/webgal-parse-wasm/: Cargo.toml
crates/webgal-parse-wasm/src/: lib.rs
crates/webgal-sentence-macro/: Cargo.toml
crates/webgal-sentence-macro/src/: attr.rs  code.rs  info.rs  lib.rs
docs/: complete.md  diagnose.md
vscode-extension/: package-lock.json  package.json  rolldown.config.mjs  tsconfig.json
vscode-extension/client/: package-lock.json  package.json  tsconfig.json
vscode-extension/client/src/: extension.ts
