[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
readme = "README.md"

authors = ["fltLi"]
license = "MPL-2.0"
repository = "https://github.com/fltLi/webgal-lsp"

[workspace.dependencies]
json-complete.path = "./crates/json-complete"
path-tree.path = "./crates/path-tree"
ranked-count.path = "./crates/ranked-count"

webgal-ls.path = "./crates/webgal-ls"
webgal-model.path = "./crates/webgal-model"
webgal-sentence-macro.path = "./crates/webgal-sentence-macro"

anyhow = "1.0"
thiserror = "2.0"

ouroboros = "0.18"
derive_more = { version = "2.1", features = [
    "from",
    "into",
    "try_into",
    "deref",
    "deref_mut",
] }
strum = { version = "0.28", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.20"
serde_json = "1.0"

itertools = "0.14"
rand = "0.10"
once_cell = "1.21"

tower-lsp = "=0.20.0"
lsp-types = "=0.94.1" # 与 tower-lsp 保持一致

criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
