[package]
name = "lsp-encode"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
description = "WebGAL LSP 编码转换"

authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
webgal-language-core.workspace = true

rayon.workspace = true

lsp-types.workspace = true
