[package]
name = "webgal-highlight"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
description = "WebGAL 场景语义高亮"

authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
webgal-model.workspace = true

rayon.workspace = true

lsp-types.workspace = true
