[package]
name = "webgal-language-server"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
description = "WebGAL 语言服务器封装"

authors.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
path-tree.workspace = true

webgal-language-core.workspace = true
webgal-language-service.workspace = true

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow.workspace = true

derive_more.workspace = true
strum.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.6", features = ["derive"] }

rayon.workspace = true

tower-lsp.workspace = true
percent-encoding = "2.3"
async-trait = "0.1"
futures-util = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "time",
] }
tokio-tungstenite = "0.29"
