[package]
name = "webgal-ls"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
description = "WebGAL 语言服务器"

authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
json-complete = { workspace = true, features = ["lsp"] }
path-tree.workspace = true
ranked-count.workspace = true

webgal-model = { workspace = true, features = ["lsp"] }

tracing = "0.1"
tracing-subscriber = "0.3"
anyhow.workspace = true
thiserror.workspace = true

derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true

once_cell.workspace = true

tower-lsp.workspace = true
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "fs",
] }
