[package]
name = "webgal-ls"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
description = "WebGAL 语言服务器"

authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
json-complete = { workspace = true, features = ["lsp"] }
path-tree.workspace = true
ranked-count.workspace = true

webgal-model = { workspace = true, features = ["lsp"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow.workspace = true
thiserror.workspace = true

getset.workspace = true
derive_more.workspace = true
strum.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.6", features = ["derive"] }

once_cell.workspace = true

tower-lsp.workspace = true
async-trait = "0.1"
futures-util = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "time",
] }
tokio-tungstenite = "0.29"
tokio-util = { version = "0.7", features = ["compat"] }
