[package]
name = "webgal-model"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
description = "WebGAL 语句及相关资源的数据模型"

authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
path-tree.workspace = true
json-complete.workspace = true

webgal-sentence-macro.workspace = true

anyhow.workspace = true
thiserror.workspace = true

ouroboros.workspace = true
derive_more.workspace = true
strum.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true

rayon.workspace = true

[dev-dependencies]
rand.workspace = true

criterion.workspace = true

[[bench]]
name = "sentence_bench"
harness = false
