[package]
name = "webgal-parse-wasm"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
description = "WebGAL 语句解析 WASM 简单封装"

authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
webgal-model = { workspace = true, features = ["serde"] }

serde.workspace = true
serde-wasm-bindgen = "0.6"

wasm-bindgen = "0.2"
