[package]
name = "webgal-sentence-macro"
version = "0.1.0"
edition.workspace = true
readme.workspace = true
description = "WebGAL 语句序列化反序列化派生宏"

authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
itertools.workspace = true

quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
